# xgc_vis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bvh.cpp  bvh.h  common.cuh  converter.cpp  def.h.cmake  main.cpp  volren.cu  volren.cuh  widget.cpp  widget.h
cmake-modules/: FindADIOS.cmake
common/: CMakeLists.txt  FeatureEvents.h  FeatureSequence.h  FeatureTransition.cpp  FeatureTransition.h  FeatureTransitionMatrix.cpp  FeatureTransitionMatrix.h  RandomColor.cpp
converter/: CMakeLists.txt  converter.cpp
core/: CMakeLists.txt  bp_utils.hpp  main.cpp  png_utils.hpp  serialization.cpp  test.cpp  uf.hpp  wsproxy.cpp  xgcBlobExtractor.cpp  xgcBlobExtractor.h  xgcData.cpp  xgcData.h  xgcLevelSetAnalysis.cpp  xgcLevelSetAnalysis.h  xgcMesh.cpp  xgcMesh.h  xgcMultiscaleAnalysis.cpp  xgcMultiscaleAnalysis.h
gui/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
gui/legacy/: widget.h
gui2D/: CMakeLists.txt  main.cpp  trackball.h  widget.cpp  widget.h
io/: CMakeLists.txt  bp_utils.hpp  main.cpp  read.F90  read1.f90  xgcData.cpp  xgcData.h  xgcDataReader.h  xgcEq.cpp  xgcEq.h  xgcMesh.cpp  xgcMesh.h
libtourtre/include/: ctArc.h  ctNode.h  tourtre.h
public/: client.js  gui.js  index.html  index1.html  render.js  server.py  style.css  todo
public/css/: style.css
public/css/lib/: tf.css
public/data/: branches.00001.json
public/js/: client.js  globalStatus.js  gui.js  three.min.js  tree.bak.js  view-2d.js  view-3d.js  view-angle.js  view-control.js  view-tf.js  view-tree.js
public/js/lib/: OrbitControls.js  TrackballControls.js  dat.gui.js  tf.js
volren/: CMakeLists.txt  aabb.h  bvh.cpp  bvh.cuh  bvh.h  common.cuh  kdbvh.cpp  kdbvh.h  lpl.cpp  lpl.h  main.cpp  mu.cuh  png_utils.hpp  volren.cu  volren.cu.cpp  volren.cuh  volrenEngine.cpp  volrenEngine.h
